Updates on development of NN Classifier app.

--- a/Study of Neural Networks/code.ipynb
+++ b/Study of Neural Networks/code.ipynb
@@ -980,13 +980,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" \n",
-    "The model that got me to 95% accuracy and its training journey:\n",
+    "\"\"\"\n",
+    "The model and its training journey:\n",
     "\n",
     "    model_A = NN(2,[input_dims, input_dims//5, output_dims],[\"Sigmoid\", \"Sigmoid\", ],mse_loss,mse_loss_deriv,'batch_norm',True,True)\n",
     "\n",
-    "Started with MSE loss, then shifted to softmax loss(but I think that was bad decision as data was not sharp and many samples were confusing) \n",
-    "then finally settled with logistic loss.\n",
+    "Started with MSE loss, then shifted to softmax loss then finally settled with logistic loss.\n",
     "\n",
     "Initially trained with Large dropout at high learning rate with mini-batches with MSE.\n",
     "\n",
@@ -1002,7 +1001,7 @@
     "    even though the training was done at exponentially lower learning rates. Maybe the space is very sharp and ragged, so the model was unable to traverse \n",
     "    it well earlier. One of the factors that caused this is the capabilites of Adaptive Moment Gradient Descent.\n",
     "\n",
-    "Reached 95%.\n",
+    "Reached 95% accuracy.\n",
     "\"\"\""
    ]
   },
@@ -2519,42 +2518,10 @@
     }
    ],
    "source": [
-    "\"\"\"\n",
-    "End-Game Training Strategy: Small batches(near 0.1), fraction of nodes(near 0.5), moderate learning rate(near 0.01).\n",
-    "\n",
-    "(Dropout Small to Large is relative to problem complexity. Complex problem have higher lower bound of \"Small\")\n",
-    "(Empirically about 0.4. Also varies from model to model depending on number of nodes in the layer).\n",
-    "\n",
-    "Batch sizes variation: Large -> Small (To fit to specific edge cases)\n",
-    "Dropout: Large -> High alpha (Since most well-trained but unstable dimensions are cut off) ; Small -> Low alpha (Since unstable dimensions might diverge otherwise) \n",
-    "Dropout: Small -> Large batches (General learning) ; Large -> Small Batches (Specific learning) \n",
-    "Batches: Small -> First Large Dropout then shift to Medium, with changing accuracy.\n",
-    "Trials: Small -> When small batches to prevent overfitting ; Large -> Depends on other factors, but for large batches, overfitting not a problem. \n",
-    "\n",
-    "\n",
-    "Is AdaM optimization insignificant at lower learning rates?\n",
-    "\n",
-    "Teach smaller networks specifically(dpt:0.4,alph: 0.0001,trials: 101,batch_size: 0.15), \n",
-    "then reinforce larger network generally(0.7, 0.000001, 201, 0.5)?\n",
-    "\n",
-    "Teach smaller networks(Large Dropout) with high learning rate specific examples, then adapt to larger network(Small Dropout) at an exponentially lower learning rate to generalize. (Without losing its previous \"foothold\")\n",
-    "\n",
-    "    alpha_high/alpha_low = total_trials_general//2 ?  (Not neccessarily, as seen empirically, model keeps improving even if total_trials surpasses alpha_high/alpha_low)\n",
-    "\n",
-    "Does SGD work better late game with low learning rates, or does it work better early game with high learning rates? \n",
-    "\n",
-    "Does changing loss function over times matter? Started with MSE till 95%, then switched to Softmax temporarily, finally log-loss.\n",
-    "\n",
-    "Once the model starts to saturate, with overall accuracy of 85-90%, what if we change our strategy and create artificial batches with more incorrect examples \n",
-    "and less correct examples. Then train the model on these batches at lower learning rates to allow it to forget some of the old relations and replace them with \n",
-    "more versatile ones? (e.g. Out of all possible mini-batches, train only on those with loss greater than some threshold.)\n",
-    "\"\"\"\n",
-    "\n",
     "# np.random.seed(694201337)\n",
     "model_A.loss = log_loss\n",
     "model_A.deriv_loss = log_loss_deriv\n",
     "# model_A.dropout_probs[1, 0] = 1\n",
-    "# model_A.isAdaM = True\n",
     "\n",
     "# To prevent overflow\n",
     "model_A.frwrd_trials = 1000\n",
@@ -2703,8 +2670,6 @@
    ],
    "source": [
     "random_example = np.random.randint(0,examples)\n",
-    "# print(np.sum(y[:,[random_example]]*decode_labels,axis=0))\n",
-    "# print(np.sum(y_pred[:,[random_example]]*decode_labels,axis=0))\n",
     "print(\"Reference answer:\",y[:,[random_example]].T)\n",
     "print(\"Model's answer:\",y_pred[:,[random_example]].T)"
    ]
@@ -2741,7 +2706,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
