Changes in titles.

--- a/Study of Wind Farms and Wind Turbine/model.ipynb
+++ b/Study of Wind Farms and Wind Turbine/model.ipynb
@@ -5652,7 +5652,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Testing the model on a 80 WT Farm with given Wind Speed data:"
+    "##### Testing the model on a 80 WT Farm having Horns Rev 1 layout with given Wind Speed data:"
    ]
   },
   {
@@ -5733,13 +5733,6 @@
     "print(\"Average Wind Velocity:\",np.mean(yr_vels),\"m/s\")\n",
     "print(\"Average Farm Output Power\",avg_power_yr,\"MW\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
