--- a/Study of Wind Farms and Wind Turbine/model.ipynb
+++ b/Study of Wind Farms and Wind Turbine/model.ipynb
@@ -203,7 +203,10 @@
     "\n",
     "    R, r = max(R,r), min(R,r)\n",
     "\n",
-    "    dy_12 = np.abs(WT2.y - WT1.y)\n",
+    "    # dy_12 = np.abs(WT2.y - WT1.y)\n",
+    "\n",
+    "    # Considering different Hub Heights owing to elevation.\n",
+    "    dy_12 = np.sqrt( (WT2.y - WT1.y)**2 + (WT1.hub_h-WT2.hub_h)**2 )\n",
     "\n",
     "    if(dy_12<=np.abs(R-r)): # Full overlap:\n",
     "        return 1\n",
